recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.error
SpiralUse:3: error: type mismatch;
 found   : Double(90.0001)
 required: Int
    spiral(100,90.0001,1,2);
               ^