recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.code
override def run() {
    spiral(100,90.0001,1,2);
}